tests/paczka1/small_fuzzy/33147810.err
Error in line 2: JX3AgySIJOY A258 51,6
Error in line 8: OAk A258 20,8
Error in line 12: JX3AgySIJOY A411 74,0
